--- a/app/src/main/res/layout/activity_add_new_pet.xml
+++ b/app/src/main/res/layout/activity_add_new_pet.xml
@@ -33,17 +33,17 @@
         android:id="@+id/sp_v_typesDropDown"
         android:layout_width="273dp"
         android:layout_height="42dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toEndOf="@+id/typeLabel"
-        app:layout_constraintTop_toBottomOf="@+id/et_v_age" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_v_addPet_newType" />
 
     <TextView
         android:id="@+id/typeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="256dp"
+        android:layout_marginTop="284dp"
         android:text="Type"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,4 +94,15 @@
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sp_v_typesDropDown" />
+
+    <TextView
+        android:id="@+id/tv_v_addPet_newType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="244dp"
+        android:layout_marginEnd="68dp"
+        android:text="Add New Type"
+        android:textColor="#03A9F4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
